making changes bcoz my dumass commited an API  key *facepalms*, anyways i deactivated and generated a new key and hopfuly its all good now and i dont need to make a new repo

--- a/weather/index.html
+++ b/weather/index.html
@@ -29,6 +29,7 @@
     <div id="search-results"></div>
     </center>
     <link rel="stylesheet" href="style.css">
+    <script src="api.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
